package com.groupjn.cartservice.memento;

import java.util.List;

public interface IMementoCareTaker<T> {
    T Memento();
}
