@startuml

title __CART-SERVICE's Class Diagram__\n

  namespace com.groupjn.cartservice {
    class com.groupjn.cartservice.CartServiceApplication {
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace configuration {
      class com.groupjn.cartservice.configuration.ShoppingConfiguration {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace controller {
      class com.groupjn.cartservice.controller.CartController {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace entity {
      class com.groupjn.cartservice.entity.Cart {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace memento {
      class com.groupjn.cartservice.memento.CartItem {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace memento {
      class com.groupjn.cartservice.memento.CartItemsMementoTakeCarer {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace memento {
      interface com.groupjn.cartservice.memento.IMementoCareTaker {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace memento {
      class com.groupjn.cartservice.memento.ShoppingCart {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace memento {
      class com.groupjn.cartservice.memento.ShoppingCartChangeTracker {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace repository {
      interface com.groupjn.cartservice.repository.CartRepository {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace service {
      interface com.groupjn.cartservice.service.CartService {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace service {
      class com.groupjn.cartservice.service.CartServiceImpl {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace vao {
      class com.groupjn.cartservice.vao.ProductSummary {
      }
    }
  }
  

  namespace com.groupjn.cartservice {
    namespace vao {
      class com.groupjn.cartservice.vao.ProductToCart {
      }
    }
  }
  

  com.groupjn.cartservice.controller.CartController o-- com.groupjn.cartservice.memento.ShoppingCart : shoppingCart
  com.groupjn.cartservice.controller.CartController o-- com.groupjn.cartservice.memento.ShoppingCartChangeTracker : shoppingCartTracker
  com.groupjn.cartservice.controller.CartController o-- com.groupjn.cartservice.service.CartService : cartService
  com.groupjn.cartservice.memento.CartItemsMementoTakeCarer .up.|> com.groupjn.cartservice.memento.IMementoCareTaker
  com.groupjn.cartservice.memento.ShoppingCartChangeTracker o-- com.groupjn.cartservice.memento.ShoppingCart : _shoppingCart
  com.groupjn.cartservice.service.CartServiceImpl .up.|> com.groupjn.cartservice.service.CartService
  com.groupjn.cartservice.service.CartServiceImpl o-- com.groupjn.cartservice.repository.CartRepository : cartRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
